--- a/app.json
+++ b/app.json
@@ -1,22 +1,27 @@
 {
   "expo": {
-    "name": "app-android-bepensa",
-    "slug": "app-android-bepensa",
-    "description": "Aplicacion para manipular datos del sistema bepensa.",
+    "name": "Bepensa App",
+    "slug": "bepensa-app-android",
     "privacy": "public",
-    "sdkVersion": "31.0.0",
-    "platforms": ["ios", "android"],
+    "sdkVersion": "32.0.0",
+    "platforms": [
+      "ios",
+      "android"
+    ],
     "version": "1.0.0",
     "orientation": "portrait",
-    "primaryColor": "#cccccc",
-    "icon": "./assets/icons/icon.png",
+    "icon": "./assets/icon.png",
     "splash": {
-      "image": "./assets/icons/loading.png"
+      "image": "./assets/splash.png",
+      "resizeMode": "contain",
+      "backgroundColor": "#ffffff"
     },
     "updates": {
       "fallbackToCacheTimeout": 0
     },
-    "assetBundlePatterns": ["**/*"],
+    "assetBundlePatterns": [
+      "**/*"
+    ],
     "ios": {
       "supportsTablet": true
     }
